# tirea

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  LICENSE-MIT  P0_P1_FIXES_SUMMARY.md  README.md  SECURITY.md  lefthook.yml  package-lock.json  playwright.config.ts
crates/awaken/: Cargo.toml
crates/awaken-contract/: Cargo.toml
crates/awaken-contract/src/: error.rs  lib.rs  periodic_refresh.rs  registry_spec.rs  thread.rs
crates/awaken-contract/tests/: contract_integration.rs
crates/awaken-doctest/: Cargo.toml
crates/awaken-doctest/src/: lib.rs
crates/awaken-ext-generative-ui/: Cargo.toml
crates/awaken-ext-generative-ui/src/: json_render.rs  lib.rs  openui.rs  run.rs  sink.rs
crates/awaken-ext-mcp/: Cargo.toml
crates/awaken-ext-mcp/src/: manager.rs  plugin.rs  transport.rs
crates/awaken-ext-mcp/tests/: mcp_tests.rs
crates/awaken-ext-observability/: Cargo.toml
crates/awaken-ext-observability/src/: composite.rs  lib.rs  metrics.rs  otel.rs  plugin.rs  sink.rs  stats.rs
crates/awaken-ext-observability/tests/: observability_integration.rs
crates/awaken-ext-permission/: Cargo.toml
crates/awaken-ext-permission/src/: matcher.rs  rules.rs  state.rs
crates/awaken-ext-permission/tests/: permission_tests.rs  skill_elevation_tests.rs
crates/awaken-ext-reminder/: Cargo.toml
crates/awaken-ext-reminder/src/: config.rs  lib.rs  output_matcher.rs  rule.rs
crates/awaken-ext-reminder/tests/: reminder_tests.rs
crates/awaken-ext-skills/: Cargo.toml
crates/awaken-ext-skills/src/: embedded.rs  error.rs  lib.rs  materialize.rs  mcp_bridge.rs  plugin.rs  registry.rs  skill.rs  skill_md.rs  state.rs  tools.rs  visibility.rs
crates/awaken-ext-skills/tests/: tool_state_tests.rs
crates/awaken-runtime/: Cargo.toml
crates/awaken-runtime/src/: builder.rs  cancellation.rs  error.rs  lib.rs
crates/awaken-runtime/tests/: event_lifecycle.rs  tool_side_effects.rs
crates/awaken-server/: Cargo.toml
crates/awaken-server/src/: app.rs  config_routes.rs  event_relay.rs  http_run.rs  http_sse.rs  lib.rs  mailbox.rs  metrics.rs  query.rs  request.rs  routes.rs  run_dispatcher.rs
crates/awaken-server/tests/: a2a_http.rs  a2a_loopback.rs  ai_sdk_multi_turn.rs  config_api.rs  e2e_nats_postgres.rs  e2e_tensorzero.rs  functional_protocol_matrix.rs  http_api.rs  phoenix_observability_e2e.rs  protocol_ag_ui.rs  protocol_ag_ui_e2e.rs  protocol_ai_sdk.rs  protocol_mcp.rs  protocol_parity.rs  run_api.rs  transport_tests.rs
crates/awaken-stores/: Cargo.toml
crates/awaken-stores/src/: file.rs  file_config.rs  lib.rs  memory.rs  memory_mailbox.rs  nats.rs  postgres.rs
crates/awaken-stores/tests/: config_store.rs  file_store.rs  memory_store.rs  postgres_store.rs
crates/awaken/examples/: live_test.rs  multi_turn.rs  permission_filter_live.rs  tool_call_live.rs
crates/awaken/src/: lib.rs  prelude.rs
crates/awaken/tests/: agent_loop.rs  handoff.rs  observability_e2e.rs  permission_gate.rs  runtime.rs  skill_permission_e2e.rs  state_action_effect.rs  store_plugin.rs  tool_executor.rs
crates/carve-agent/: Cargo.toml
crates/carve-agent-contract/: Cargo.toml
crates/carve-agent-contract/src/: agent.rs  change.rs  context.rs  control.rs  conversation.rs  event.rs  lib.rs  plugin.rs  protocol.rs  run.rs  run_context.rs  run_delta.rs  skills.rs  stop.rs  stop_conditions.rs  storage.rs  stream.rs  testing.rs  tool.rs  tool_registry.rs
crates/carve-agent-extension-interaction/: Cargo.toml
crates/carve-agent-extension-interaction/src/: agent_control.rs  context_provider.rs  interaction_plugin.rs  interaction_response.rs  lib.rs  outbox.rs
crates/carve-agent-extension-mcp/: Cargo.toml
crates/carve-agent-extension-mcp/src/: lib.rs
crates/carve-agent-extension-observability/: Cargo.toml
crates/carve-agent-extension-observability/src/: lib.rs
crates/carve-agent-extension-reminder/: Cargo.toml
crates/carve-agent-extension-reminder/src/: lib.rs  system_reminder.rs
crates/carve-agent-extension-skills/: Cargo.toml
crates/carve-agent-extension-skills/src/: combined_plugin.rs  discovery_plugin.rs  embedded_registry.rs  in_memory_registry.rs  lib.rs  registry.rs  resource_lookup.rs  runtime_plugin.rs  skill_md.rs  subsystem.rs  tool_filter.rs  tools.rs  types.rs
crates/carve-agent-loop/: Cargo.toml
crates/carve-agent-loop/examples/: live_deepseek.rs  live_deepseek_skills.rs
crates/carve-agent-loop/src/: lib.rs
crates/carve-agent-loop/tests/: otel_telemetry.rs  phoenix_observability_e2e.rs  skills_integration.rs
crates/carve-agent-runtime-contract/: Cargo.toml
crates/carve-agent-runtime-contract/src/: event.rs  interaction.rs  lib.rs  run.rs  stop.rs
crates/carve-agent/benches/: message_cloning.rs  quick_clone_test.rs  session_operations.rs  thread_operations.rs
crates/carve-agent/examples/: live_deepseek.rs  live_deepseek_skills.rs
crates/carve-agent/src/: activity.rs  ag_ui.rs  agent.rs  ai_sdk_sse.rs  convert.rs  execute.rs  lib.rs  loop.rs  mcp_registry.rs  phase.rs  plugin.rs  prelude.rs  protocol.rs  session.rs  state_types.rs  stop.rs  storage.rs  stream.rs  thread.rs  thread_store.rs  tool_filter.rs  types.rs  (+1 more)
crates/carve-agentos/: Cargo.toml
crates/carve-agentos-server/: Cargo.toml
crates/carve-protocol-ag-ui/: Cargo.toml
crates/carve-protocol-ag-ui-runtime/: Cargo.toml
crates/carve-protocol-ai-sdk-v6/: Cargo.toml
crates/carve-protocol-contract/: Cargo.toml
crates/carve-state-derive/: Cargo.toml
examples/: Cargo.toml  multi_turn.rs
examples/ai-sdk-starter/: .env.example  README.md  agent-config.json  index.html  package-lock.json  package.json  vite.config.ts
examples/copilotkit-starter/: .env.example  .gitignore  README.md  agent-config.json  next.config.mjs  package-lock.json  package.json
examples/examples/: ai_sdk_starter.rs  copilotkit_starter.rs  generative_ui.rs  research.rs  travel.rs
examples/shared/: mcp-ui-demo-server.py
examples/src/: lib.rs  research.rs  travel.rs
examples/travel-ui/: package-lock.json  tsconfig.json
(+2121 files in other folders)
