[workspace]
resolver = "2"
members = [
    "crates/awaken-contract",
    "crates/awaken-stores",
    "crates/awaken-runtime",
    "crates/awaken-ext-permission",
    "crates/awaken-ext-observability",
    "crates/awaken-ext-mcp",
    "crates/awaken",
    "crates/awaken-ext-skills",
    "crates/awaken-server",
    "examples",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
awaken-contract = { version = "0.1.0", path = "crates/awaken-contract" }
awaken-stores = { version = "0.1.0", path = "crates/awaken-stores" }
awaken-runtime = { version = "0.1.0", path = "crates/awaken-runtime" }
awaken-ext-permission = { version = "0.1.0", path = "crates/awaken-ext-permission" }
awaken-ext-observability = { version = "0.1.0", path = "crates/awaken-ext-observability" }
awaken-ext-mcp = { version = "0.1.0", path = "crates/awaken-ext-mcp" }
awaken-ext-skills = { version = "0.1.0", path = "crates/awaken-ext-skills" }
awaken-server = { version = "0.1.0", path = "crates/awaken-server" }
glob-match = "0.2"
regex = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
futures = "0.3"
tracing = "0.1"
typedmap = { version = "0.6", features = ["clone"] }
uuid = { version = "1", features = ["v7"] }
genai = "0.6.0-beta.10"
tokio = { version = "1", features = ["sync"] }
reqwest = { version = "0.12", features = ["json"] }
schemars = "0.8"
jsonschema = "0.45"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
