[workspace]
resolver = "2"
members = [
    "crates/awaken-contract",
    "crates/awaken-stores",
    "crates/awaken-runtime",
    "crates/awaken-ext-permission",
    "crates/awaken-ext-observability",
    "crates/awaken-ext-mcp",
    "crates/awaken",
    "crates/awaken-ext-skills",
    "crates/awaken-ext-reminder",
    "crates/awaken-ext-generative-ui",
    "crates/awaken-ext-deferred-tools",
    "crates/awaken-tool-pattern",
    "crates/awaken-server",
    "crates/awaken-doctest",
    "examples",
    "examples/ai-sdk-starter/agent",
    "examples/copilotkit-starter/agent",
]

[workspace.package]
version = "0.1.2-dev"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AwakenWorks/awaken"
homepage = "https://github.com/AwakenWorks/awaken"
keywords = ["ai-agent", "llm", "agent-framework", "tool-use", "multi-agent"]
categories = ["web-programming", "asynchronous"]
rust-version = "1.85"

[workspace.dependencies]
awaken-contract = { version = "0.1.2-dev", path = "crates/awaken-contract" }
awaken-stores = { version = "0.1.2-dev", path = "crates/awaken-stores" }
awaken-runtime = { version = "0.1.2-dev", path = "crates/awaken-runtime" }
awaken-ext-permission = { version = "0.1.2-dev", path = "crates/awaken-ext-permission" }
awaken-ext-observability = { version = "0.1.2-dev", path = "crates/awaken-ext-observability" }
awaken-ext-mcp = { version = "0.1.2-dev", path = "crates/awaken-ext-mcp" }
awaken-ext-skills = { version = "0.1.2-dev", path = "crates/awaken-ext-skills" }
awaken-ext-reminder = { version = "0.1.2-dev", path = "crates/awaken-ext-reminder" }
awaken-ext-generative-ui = { version = "0.1.2-dev", path = "crates/awaken-ext-generative-ui" }
awaken-ext-deferred-tools = { version = "0.1.2-dev", path = "crates/awaken-ext-deferred-tools" }
awaken-tool-pattern = { version = "0.1.2-dev", path = "crates/awaken-tool-pattern" }
awaken-server = { version = "0.1.2-dev", path = "crates/awaken-server" }
glob-match = "0.2"
regex = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
futures = "0.3"
tracing = "0.1"
typedmap = { version = "0.6", features = ["clone"] }
uuid = { version = "1", features = ["v7"] }
genai = "0.6.0-beta.10"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
reqwest = { version = "0.13", features = ["json"] }
schemars = "1"
jsonschema = "0.45"
parking_lot = "0.12"
proptest = "1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
