[package]
name = "awaken-ext-generative-ui"
version.workspace = true
edition.workspace = true
description = "Server-driven UI component plugin (A2UI) for Awaken"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
openui = []
json-render = []

[dependencies]
awaken-contract = { workspace = true }
awaken-runtime = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
