[package]
name = "awaken-ext-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
awaken-contract = { workspace = true }
awaken-runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["io-util", "net", "process", "time"] }
reqwest = { workspace = true }
mcp = { package = "model-context-protocol", version = "0.2", default-features = false, features = ["client"] }

[dev-dependencies]
awaken-runtime = { workspace = true, features = ["test-utils"] }
tokio = { workspace = true, features = ["rt-multi-thread", "io-util", "time"] }

[lints]
workspace = true
