[package]
name = "awaken-ext-observability"
version.workspace = true
edition.workspace = true

[dependencies]
awaken-contract = { workspace = true }
awaken-runtime = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

# Optional OTel
opentelemetry = { version = "0.28", optional = true }
opentelemetry_sdk = { version = "0.28", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["time"] }
futures = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["fmt", "registry"] }

[features]
default = []
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk"]

[lints]
workspace = true
