[package]
name = "awaken-ext-skills"
version.workspace = true
edition.workspace = true

[dependencies]
awaken-contract = { workspace = true }
awaken-runtime = { workspace = true }
awaken-ext-mcp = { workspace = true, optional = true }
awaken-ext-permission = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["time", "process", "fs"] }
serde_yaml = "0.9"
sha2 = "0.10"
base64 = "0.22"
unicode-normalization = "0.1"

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
awaken-ext-mcp = { workspace = true }
mcp = { package = "model-context-protocol", version = "0.2", default-features = false, features = ["client"] }

[features]
default = []
mcp = ["dep:awaken-ext-mcp"]

[lints]
workspace = true
