[package]
name = "awaken-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
awaken-contract = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
typedmap = { workspace = true }
uuid = { workspace = true }
genai = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true, optional = true }
schemars = { workspace = true }
jsonschema = { workspace = true }
parking_lot = { workspace = true }

[features]
default = ["a2a", "handoff", "background"]
a2a = ["dep:reqwest"]
handoff = []
background = []
parallel-tools = []
test-utils = []

[dev-dependencies]
awaken-runtime = { path = ".", features = ["test-utils"] }
awaken-stores = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
