[package]
name = "awaken-server"
version.workspace = true
edition.workspace = true

[dependencies]
awaken-contract = { workspace = true }
awaken-runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "signal", "time"] }
axum = { version = "0.7", default-features = false, features = ["http1", "json", "query", "tokio"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
async-stream = "0.3"
tokio-stream = "0.1"
bytes = "1"

# Optional
awaken-ext-permission = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "time"] }
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
awaken-stores = { workspace = true }
awaken-runtime = { workspace = true }
async-trait = { workspace = true }

[features]
default = ["permission"]
permission = ["dep:awaken-ext-permission"]

[lints]
workspace = true
