[package]
name = "awaken-server"
version.workspace = true
edition.workspace = true
description = "Multi-protocol HTTP server with SSE, mailbox, and protocol adapters for Awaken"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
awaken-contract = { workspace = true }
awaken-runtime = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "signal", "time"] }
axum = { version = "0.7", default-features = false, features = ["http1", "json", "query", "tokio"] }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["trace"] }
async-stream = "0.3"
tokio-stream = "0.1"
bytes = "1"
parking_lot = { workspace = true }
arc-swap = "1"

# MCP server
mcp = { package = "model-context-protocol", version = "0.2", default-features = false, features = ["server", "client"] }

# Metrics / observability
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Optional
awaken-ext-permission = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "time"] }
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
awaken-stores = { workspace = true }
awaken-runtime = { workspace = true }
awaken-ext-observability = { workspace = true, features = ["otel"] }
async-trait = { workspace = true }
reqwest = { workspace = true }
genai = { workspace = true }
uuid = { workspace = true }

[features]
default = ["permission"]
permission = ["dep:awaken-ext-permission"]
otel = []

[lints]
workspace = true
