[package]
name = "awaken-stores"
version.workspace = true
edition.workspace = true

[dependencies]
awaken-contract = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "time"] }
uuid = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Optional backends
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json"], default-features = false, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "time"] }
tempfile = "3"
proptest = { workspace = true }
futures = { workspace = true }

[features]
default = []
file = []
postgres = ["dep:sqlx"]

[lints]
workspace = true
