[package]
name = "awaken"
version.workspace = true
edition.workspace = true

[dependencies]
awaken-contract = { workspace = true }
awaken-runtime = { workspace = true }
awaken-ext-permission = { workspace = true, optional = true }
awaken-ext-observability = { workspace = true, optional = true }
awaken-ext-mcp = { workspace = true, optional = true }
awaken-ext-skills = { workspace = true, optional = true }
awaken-ext-generative-ui = { workspace = true, optional = true }
awaken-stores = { workspace = true }
awaken-server = { workspace = true, optional = true }

[features]
default = ["permission", "observability"]
permission = ["dep:awaken-ext-permission"]
observability = ["dep:awaken-ext-observability"]
mcp = ["dep:awaken-ext-mcp"]
skills = ["dep:awaken-ext-skills"]
server = ["dep:awaken-server"]
generative-ui = ["dep:awaken-ext-generative-ui"]
full = ["permission", "observability", "mcp", "skills", "server", "generative-ui"]

[dev-dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

[lints]
workspace = true
