[package]
name = "carve-agent-extension-interaction"
version = "0.1.0"
edition = "2021"
description = "Interaction extension for carve-agent"
license = "MIT OR Apache-2.0"

[dependencies]
carve-state = { path = "../carve-state" }
carve-agent-contract = { path = "../carve-agent-contract" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
carve-agent-contract = { path = "../carve-agent-contract", features = ["test-support"] }
carve-state = { path = "../carve-state" }
tokio = { version = "1", features = ["rt", "macros"] }
