[package]
name = "carve-agent-extension-observability"
version = "0.1.0"
edition = "2021"
description = "Observability extension for carve-agent"
license = "MIT OR Apache-2.0"

[dependencies]
carve-state = { path = "../carve-state" }
carve-agent-contract = { path = "../carve-agent-contract" }
carve-state-derive = { path = "../carve-state-derive" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
genai = "0.5"
tracing = "0.1"

[dev-dependencies]
futures = "0.3"
tokio = { version = "1", features = ["rt", "macros", "time"] }
opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio", "testing"] }
tracing-opentelemetry = "0.29"
tracing-subscriber = { version = "0.3", features = ["fmt", "registry"] }
