[package]
name = "carve-agent-extension-skills"
version = "0.1.0"
edition = "2021"
description = "Skills extension for carve-agent"
license = "MIT OR Apache-2.0"

[dependencies]
carve-agent-contract = { path = "../carve-agent-contract" }
carve-agent-extension-permission = { path = "../carve-agent-extension-permission" }
carve-state = { path = "../carve-state" }
carve-state-derive = { path = "../carve-state-derive" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
unicode-normalization = "0.1"
tracing = "0.1"
base64 = "0.22"
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt", "time", "process"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
tempfile = "3"
