[package]
name = "carve-agent"
version = "0.1.0"
edition = "2021"
description = "Immutable state-driven agent facade"
license = "MIT OR Apache-2.0"

[dependencies]
carve-agent-loop = { path = "../carve-agent-loop" }
carve-agentos = { path = "../carve-agentos" }
carve-state = { path = "../carve-state" }
async-trait = "0.1"
serde_json = "1"

[features]
default = []
mcp = ["carve-agentos/mcp"]

[dev-dependencies]
trybuild.workspace = true
criterion.workspace = true

[[bench]]
name = "message_cloning"
harness = false

[[bench]]
name = "thread_operations"
harness = false

[[bench]]
name = "quick_clone_test"
harness = false
