[package]
name = "carve-agent"
version = "0.1.0"
edition = "2021"
description = "Unified umbrella crate for the carve agent framework"
license = "MIT OR Apache-2.0"

[dependencies]
# Always included: core contract types + state
carve-agent-contract = { path = "../carve-agent-contract" }
carve-state = { path = "../carve-state" }

# Core: agent loop + orchestrator (default)
carve-agent-loop = { path = "../carve-agent-loop", optional = true }
carve-agentos = { path = "../carve-agentos", optional = true }

# Protocols
carve-protocol-ag-ui = { path = "../carve-protocol-ag-ui", optional = true }
carve-protocol-ai-sdk-v6 = { path = "../carve-protocol-ai-sdk-v6", optional = true }

# Extensions
carve-agent-extension-skills = { path = "../carve-agent-extension-skills", optional = true }

# Storage backends
carve-thread-store-adapters = { path = "../carve-thread-store-adapters", optional = true }

# Re-exported for prelude convenience
async-trait = "0.1"
serde = { workspace = true }
serde_json = "1"
schemars = { workspace = true }

[features]
default = ["core"]
core = ["dep:carve-agent-loop", "dep:carve-agentos"]
ag-ui = ["dep:carve-protocol-ag-ui", "core"]
ai-sdk-v6 = ["dep:carve-protocol-ai-sdk-v6"]
skills = ["dep:carve-agent-extension-skills", "core"]
mcp = ["core", "carve-agentos/mcp"]
postgres = ["dep:carve-thread-store-adapters", "carve-thread-store-adapters/postgres"]
nats = ["dep:carve-thread-store-adapters", "carve-thread-store-adapters/nats"]
full = ["core", "ag-ui", "ai-sdk-v6", "skills", "mcp", "postgres", "nats"]

[dev-dependencies]
trybuild.workspace = true
criterion.workspace = true

[[bench]]
name = "message_cloning"
harness = false

[[bench]]
name = "thread_operations"
harness = false

[[bench]]
name = "quick_clone_test"
harness = false
