[package]
name = "carve-agentos"
version = "0.1.0"
edition = "2021"
description = "AgentOS orchestration layer for carve-agent"
license = "MIT OR Apache-2.0"

[dependencies]
carve-state = { path = "../carve-state" }
carve-agent-contract = { path = "../carve-agent-contract" }
carve-agent-loop = { path = "../carve-agent-loop" }
carve-agent-extension-permission = { path = "../carve-agent-extension-permission" }
carve-agent-extension-reminder = { path = "../carve-agent-extension-reminder" }
carve-agent-extension-interaction = { path = "../carve-agent-extension-interaction" }
carve-agent-extension-observability = { path = "../carve-agent-extension-observability" }
carve-agent-extension-skills = { path = "../carve-agent-extension-skills" }
carve-agent-extension-mcp = { path = "../carve-agent-extension-mcp", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "rt", "time", "process"] }
thiserror = "2"
genai = "0.5"
futures = "0.3"
uuid = { version = "1", features = ["v4", "v7"] }

[features]
default = []
mcp = ["dep:carve-agent-extension-mcp"]

[dev-dependencies]
carve-agent-contract = { path = "../carve-agent-contract", features = ["test-support"] }
carve-thread-store-adapters = { path = "../carve-thread-store-adapters" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[lints]
workspace = true
